# ChangeLog for media-gfx/graphite2
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-gfx/graphite2/ChangeLog,v 1.79 2014/11/22 21:59:13 dilfridge Exp $

  22 Nov 2014; Andreas K. Huettel <dilfridge@gentoo.org>
  graphite2-1.2.4-r1.ebuild:
  Add missing dependency, bug 529236

  18 Nov 2014; Andreas K. Huettel <dilfridge@gentoo.org>
  graphite2-1.2.1.ebuild, graphite2-1.2.4.ebuild, graphite2-1.2.4-r1.ebuild:
  Replace perl-module_pkg_setup with perl_set_version

  16 Nov 2014; Andreas K. Huettel <dilfridge@gentoo.org>
  graphite2-1.2.1.ebuild, graphite2-1.2.4.ebuild, graphite2-1.2.4-r1.ebuild:
  Replace fixlocalpod with perl_delete_localpod

  19 Oct 2014; Andreas K. Huettel <dilfridge@gentoo.org>
  graphite2-1.2.1.ebuild, graphite2-1.2.4.ebuild, graphite2-1.2.4-r1.ebuild:
  Add slot operator on perl dependency

  11 Oct 2014; Markus Meier <maekke@gentoo.org> graphite2-1.2.4-r1.ebuild:
  arm stable, bug #512012

  15 Sep 2014; Agostino Sarubbo <ago@gentoo.org> graphite2-1.2.4-r1.ebuild:
  Stable for sparc, wrt bug #512012

  25 Aug 2014; Agostino Sarubbo <ago@gentoo.org> graphite2-1.2.4-r1.ebuild:
  Stable for alpha, wrt bug #512012

  23 Aug 2014; Agostino Sarubbo <ago@gentoo.org> graphite2-1.2.4-r1.ebuild:
  Stable for ia64, wrt bug #512012

  21 Aug 2014; Agostino Sarubbo <ago@gentoo.org> graphite2-1.2.4-r1.ebuild:
  Stable for ppc64, wrt bug #512012

  28 Jul 2014; Agostino Sarubbo <ago@gentoo.org> graphite2-1.2.4-r1.ebuild:
  Stable for ppc, wrt bug #512012

  23 Jul 2014; Agostino Sarubbo <ago@gentoo.org> graphite2-1.2.4-r1.ebuild:
  Stable for x86, wrt bug #512012

  22 Jul 2014; Agostino Sarubbo <ago@gentoo.org> graphite2-1.2.4-r1.ebuild:
  Stable for amd64, wrt bug #512912

  24 Jun 2014; Jeroen Roovers <jer@gentoo.org> graphite2-1.2.4-r1.ebuild:
  Stable for HPPA (bug #509584).

  19 Jun 2014; Michał Górny <mgorny@gentoo.org> graphite2-1.2.4-r1.ebuild: