@@ -1,6 +1,6 @@
 # Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/graphite2/graphite2-1.2.1.ebuild,v 1.18 2014/11/18 23:41:35 dilfridge Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/graphite2/graphite2-1.2.1.ebuild,v 1.19 2014/12/13 21:01:33 dilfridge Exp $
 
 EAPI=5
 
@@ -77,7 +77,7 @@ src_compile() {
 	cmake-utils_src_compile
 	if use perl; then
 		cd contrib/perl
-		perl-module_src_prep
+		perl-module_src_configure
 		perl-module_src_compile
 	fi
 }
